## 0.0.3 (17 march 2017)

* Added `format.measured` and `format.calculated`
* Added Extraction and Replacement methods for `measured` and 
  `calculated` classes.
* Included `label` subclass to `measured` and `calculated` objects.
  This prevents the `print.label` method from superceding the `print.measured`
  and `print.calculated` methods.

## 0.0.2 (16 March 2017)

* Added `as_calculated`
* Added `is_calculated`
* Added `count_sigfig`
* Added `abstract_precision`
* Added `set_precision` and `get_precision`
* Added `set_sigfig` and `set_precision`
* Added `set_label`, `get_label`, `set_units`, and `get_units`
# Added `print.label`

## 0.0.1 (15 March 2017)

* Added `as_measured`, `is_measured`
* Added `print.measured`